Add reset button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Etch-A-Sketch</h1>
     <button>Change grid size</button>
+    <button id="reset">Reset</button>
     <div id="container"></div>
 </body>
 </html>
