Add a prompt to take user input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
-    <button>Change grid size</button>
+    <button id="resize">Change grid size</button>
     <button id="reset">Reset</button>
     <div id="container"></div>
 </body>
