Add menu with ink options

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
-    <button id="resize">Change grid size</button>
-    <button id="reset">Reset</button>
-    <div id="container"></div>
+    <div id="container">
+        <div id="menu">
+            <button id="resize">Change grid size</button>
+            <button id="black">Black ink</button>
+            <button id="rainbow">Rainbow ink</button>
+            <button id="gradual">Gradual ink</button>
+            <button id="reset">Erase</button> 
+        </div>
+            <div id="sketchpad"></div>
+            <p></p>
+    </div>
 </body>
 </html>
